# FFmpegDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/qy/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/qy/demo/: MainActivity.java
app/src/main/java/com/qy/demo/base/: LibraryManager.java
app/src/main/java/com/qy/demo/ui/: HelloActivity.java
app/src/main/jniLibs/include/libavcodec/: avcodec.h
app/src/main/res/layout/: activity_hello.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/qy/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
